--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "denngarr/seat-srp",
+    "name": "cryptatech/seat-srp",
     "description": "A module for SeAT that tracks SRP requests",
     "type": "seat-plugin",
     "license": "GPL-2.0",
@@ -17,20 +17,20 @@
     "prefer-stable": true,
     "autoload": {
         "psr-4": {
-            "Denngarr\\Seat\\SeatSrp\\": "src/"
+            "CryptaTech\\Seat\\SeatSrp\\": "src/"
         }
     },
     "extra": {
         "laravel": {
             "providers": [
-                "Denngarr\\Seat\\SeatSrp\\SrpServiceProvider"
+                "CryptaTech\\Seat\\SeatSrp\\SrpServiceProvider"
             ]
         }
      },	     
     "require": {
-        "eveseat/services": "^4.1",
-        "eveseat/eveapi": "^4.0",
-        "eveseat/web": "^4.0",
+        "eveseat/services": "5.0",
+        "eveseat/eveapi": "^5.0",
+        "eveseat/web": "^5.0",
         "eveseat/eseye": "^2.0"
     }
 }
